# cepe_fynsp_rag

./: .env.example  .gitignore  AGENTS.md  README.md  credentials.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: approved_guidance_docs.yaml  dashboards.yaml  settings.yaml
config/data_contracts/: costex.yaml  formex.yaml  planex.yaml
data/raw/: README.md
docs/: dependency_inventory.md  finding_dispositions.md
docs/agent_notes/: 2026-07-16_dashboard_01_pit_production.md  2026-07-16_dashboards_02_to_05_pit_production.md  2026-07-17_dashboard_hardening_and_redesign.md  2026-07-20_asksage_nested_token_response.md  2026-07-20_asksage_powershell_launcher.md  2026-07-20_asksage_runtime_schema_diagnosis.md  2026-07-20_dashboard_get_insights.md  2026-07-20_insights_pptx_context.md  README.md
docs/agents/: AGENT_01_CEPE_PROGRAM_REVIEW_CONTEXT.md  AGENT_02_DATASETS_AND_GRAIN.md  AGENT_03_DASHBOARD_OBJECTIVES.md  AGENT_04_ONTOLOGY_AND_RAG.md  AGENT_05_CODING_STANDARDS.md  AGENT_06_REPORT_GENERATOR.md  AGENT_07_DATA_QUALITY_RULES.md  AGENT_08_SECURITY_AND_GOVERNANCE.md  AGENT_09_ASKSAGE_INTEGRATION.md
docs/architecture/: PROJECT_STRUCTURE.md
notebooks/: test_asksage_api.ipynb
scripts/: build_synthetic_ci.py  diagnose_insights_response.py  index_guidance_docs.py  run_etl.py  run_insights_server.py  start_insights.ps1  validate_browser.py  validate_insights_browser.py  validate_static.py
src/cepe_fynsp/: AGENTS.md  __init__.py  config.py  schemas.py
tests/: AGENTS.md
tests/frontend/: insights_harness.html  insights_harness.js
tests/unit/: test_normalize.py  (+13 more)
web/: AGENTS.md  index.html
(+54 files in other folders)
