[project]
name = "cepe-fynsp-dashboard"
version = "0.1.0"
description = "CEPE FYNSP program review dashboard suite"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "polars>=1.0",
  "duckdb>=1.0",
  "pyarrow>=15.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "networkx>=3.3",
  "rdflib>=7.0",
  "jinja2>=3.1",
  "plotly>=5.22",
  "python-docx>=1.1",
  "typer>=0.12",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "ipykernel>=6.29"
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
